Fixed alignment issue with group header
Former-commit-id: ef39607fc903cc65c952ac995f2d52d1341c03c2

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/pages/dashboard/dashboard.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/pages/dashboard/dashboard.css
@@ -985,7 +985,6 @@ h2 {
     font-weight: bold; 
     white-space: normal;
     line-height: 22px;
-    align-self: flex-start;
 }
 
 .group-details-toggle {
